package core.jobOpening.domain;

public enum PhaseName {
    APPLICATION,
    SCREENING,
    INTERVIEWS,
    ANALYSIS,
    RESULT
}
