package core.jobOpening.domain;

public enum Status {
    OPEN,
    CLOSED
}