@startuml
'https://plantuml.com/class-diagram

hide field
hide methods

title Domain Driven Design
skinparam linetype wavy


package InterviewModelAgg #bababa {
    class InterviewModel<<Root>><<Entity>>
    class SpecName<<Value Object>><<Id>>
    class JarFile<<Value Object>>
    class Description<<Value Object>>

    InterviewModel"1"-->"1"JarFile
    InterviewModel"1"-->"1"SpecName
    InterviewModel"1"-->"1"Description
}

package CostumerAgg #baabab {
    class Costumer<<Entity>><<Root>>
    class CustomerCode<<Value Object>><<Id>>
    class Name<<Value Object>>
    class Address<<Value Object>>
    class CostumerRepresentative<<Entity>>
    class CostumerName<<Value Object>>

    class Email<<Value Object>><<Id>>
    class PhoneNumber<<Value Object>>
    class Name<<Value Object>>
    class Password<<Value Object>>

    Costumer "1" --> "1" CustomerCode
    Costumer "1" --> "1" CostumerName
    Costumer "1" --> "1" Address
    Costumer "1" --> "1" CostumerRepresentative

    CostumerRepresentative "1" --> "1" Email
    CostumerRepresentative "1" --> "1" PhoneNumber
    CostumerRepresentative "1" --> "1" Name
    CostumerRepresentative "1" --> "1" Password
}

package JobOpeningAgg #bbaabb {
    class JobOpening<<Root>><<Entity>>
    class JobReference<<Value Object>><<Id>>
    class NrVacancies<<Value Object>>
    class JobOpeningTitle<<Value Object>>
    class ContractType<<Value Object>>
    class Description<<Value Object>>
    class Address<<Value Object>>
    class JobMode<<Value Object>>
    class JobState<<Enum>><<Value Object>>
    class StartDate<<Value Object>>

    class Phase<<Entity>>
    class PhaseName<<Enum>><<Id>>
    class JobActiveSinceDate<<Value Object>>
    class EndDate<<Value Object>>
    class Status <<Enum>>
    class RecruitmentProcess<<Entity>>


    JobOpening "1" --> "1" JobReference
    JobOpening "1" --> "1" NrVacancies
    JobOpening "1" --> "1" JobOpeningTitle
    JobOpening "1" --> "1" ContractType
    JobOpening "1" --> "1" Description
    JobOpening "1" --> "1" Address
    JobOpening "1" --> "1" JobMode
    JobOpening "1" --> "1" JobState
    JobOpening "1" --> "1" JobActiveSinceDate
    JobOpening "1" --> "0..1" RecruitmentProcess

    JobOpening "1..*"--> "1" Costumer : Refers to


    Phase "1" --> "1" PhaseName
    Phase "1" --> "1" StartDate
    Phase "1" --> "1" EndDate
    Phase "1" --> "1" Status

    RecruitmentProcess "1"-->"4..5" Phase : Is separated into
}

package RequirementsSpecificationAgg #bbbbaa {
    class RequirementsSpecification<<Root>><<Entity>>
    class JarFile<<Value Object>>
    class SpecName<<Value Object>><<Id>>
    class Description<<Value Object>>

    RequirementsSpecification "1" --> "1" JarFile
    RequirementsSpecification "1" --> "1" SpecName
    RequirementsSpecification "1" --> "1" Description
}

package CandidateAgg #aababb {
    class Candidate<<Root>><<Entity>>
    class Email<<Value Object>><<Id>>
    class Name<<Value Object>>
    class PhoneNumber<<Value Object>>
    class CandidateState<<Value Object>>


    Candidate "1" --> "1" Email
    Candidate "1" --> "1" Name
    Candidate "1" --> "1" PhoneNumber
    Candidate "1" --> "1" CandidateState
}

package ApplicationAgg #aaaabb {

    class Application<<Root>><<Entity>>
    class ApplicationID<<Value Object>><<Id>>

    class FilePath<<Value Object>>
    class File<<Value Object>>
    class FileType<<Enum>>

    class RejectionJustification<<Value Object>>
    class InterviewDateTime<<Value Object>>

    class ApplicationState<<Entity>>
    class ApplicationStateName<<Enum>><<ID>>

    class RequirementsEvaluation<<Enum>>

    class Interview<<Value Object>>
    class InterviewGrade<<Value Object>>

    Application "1" --> "1" ApplicationID
    Application "1" --> "1" ApplicationState
    ApplicationState "1" --> "1" ApplicationStateName
    ApplicationState "1" --> "0..1" RejectionJustification
    Application "1" --> "0..1" Interview
    Application "1" --> "*" File

    Application "1" --> "1" RequirementsEvaluation

    File "1" --> "1" FilePath
    File "1" --> "1" FileType



    Interview "1" --> "0..1" InterviewGrade
    Interview "1" --> "1" InterviewDateTime



    Application "0..*" --> "1" JobOpening : Refers to
    Application "1..*" --> "1" Candidate : Is submitted by
}

package RankingAgg #abbabb {
    class Rank<<Root>><<Entity>>
    class RankID<<Value Object>><<Id>>
    class RankValue<<Value Object>>

    Rank "1" --> "1" RankID
    Rank "1" --> "1" RankValue

    Rank "1"-->"1" JobOpening : Refers to
    Rank "1"-->"*" Candidate : Is ordered by
}

JobOpening "1"-->"0..1" RequirementsSpecification
JobOpening "1"-->"0..1" InterviewModel
@enduml